Feature engineering, cleaning, base model and modeling

--- a/1_Car_price_prediction/notebooks/00_exploration.ipynb
+++ b/1_Car_price_prediction/notebooks/00_exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b464ba98-eee3-444d-b443-7d8877d39bf6",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "32cdc91e-a333-484c-a2ca-7dfb399c0584",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "3812152e-3f60-4d1d-94e8-64d1dc47ccda",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
        "(11914, 16)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,33 +55,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "a7a1cf38-f7d0-4b06-aaae-a79777fc6a4c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Make                         Chevrolet\n",
-       "Model                         Uplander\n",
-       "Year                              2008\n",
-       "Engine Fuel Type      regular unleaded\n",
-       "Engine HP                        240.0\n",
-       "Engine Cylinders                   6.0\n",
-       "Transmission Type            AUTOMATIC\n",
-       "Driven_Wheels        front wheel drive\n",
-       "Number of Doors                    4.0\n",
-       "Market Category              Flex Fuel\n",
-       "Vehicle Size                   Compact\n",
-       "Vehicle Style        Passenger Minivan\n",
-       "highway MPG                         23\n",
-       "city mpg                            16\n",
-       "Popularity                        1385\n",
-       "MSRP                             21540\n",
-       "Name: 11086, dtype: object"
+       "Make                                Ford\n",
+       "Model                             Ranger\n",
+       "Year                                2009\n",
+       "Engine Fuel Type        regular unleaded\n",
+       "Engine HP                          207.0\n",
+       "Engine Cylinders                     6.0\n",
+       "Transmission Type                 MANUAL\n",
+       "Driven_Wheels           four wheel drive\n",
+       "Number of Doors                      2.0\n",
+       "Market Category                      NaN\n",
+       "Vehicle Size                     Compact\n",
+       "Vehicle Style        Extended Cab Pickup\n",
+       "highway MPG                           19\n",
+       "city mpg                              15\n",
+       "Popularity                          5657\n",
+       "MSRP                               21810\n",
+       "Name: 8342, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "id": "e8386050-1bb2-41de-8495-9f54c2d47154",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "6c8857b7-4817-45b8-bc66-1fc14b035e2f",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "max      354.000000    137.000000   5657.000000  2.065902e+06  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "id": "b54da9f2-0184-4278-8048-a33574d73e4b",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,6 @@
    "source": [
     "# Lets take a look at the questionable columns\n",
     "questionable_cols = [\"Make\", \"Engine Fuel Type\", \"Engine Cylinders\",]\n",
-    "\n",
     "for col in questionable_cols:\n",
     "    print(col, \"====> Uniques=\", raw_df[col].nunique())\n",
     "    print(raw_df[col].unique().tolist())\n",
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "id": "59f88b34-0329-47f8-8b4e-36045d6bf619",
    "metadata": {},
    "outputs": [
@@ -618,7 +617,7 @@
        "Alfa Romeo         1"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,8 +628,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "55868bc4-a654-45ff-bbbc-08e52e817d6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Make                    0\n",
+       "Model                   0\n",
+       "Year                    0\n",
+       "Engine Fuel Type        3\n",
+       "Engine HP              69\n",
+       "Engine Cylinders       30\n",
+       "Transmission Type       0\n",
+       "Driven_Wheels           0\n",
+       "Number of Doors         6\n",
+       "Market Category      3742\n",
+       "Vehicle Size            0\n",
+       "Vehicle Style           0\n",
+       "highway MPG             0\n",
+       "city mpg                0\n",
+       "Popularity              0\n",
+       "MSRP                    0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check number of null values in each column\n",
+    "raw_df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "17bb4016-8479-4e25-bbb0-dc803698b05e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Transmission Type\n",
+       "AUTOMATIC            8266\n",
+       "MANUAL               2935\n",
+       "AUTOMATED_MANUAL      626\n",
+       "DIRECT_DRIVE           68\n",
+       "UNKNOWN                19\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the number of each unique type of values in transmission type feature\n",
+    "raw_df[['Transmission Type']].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "cb704962-cb98-46cd-9ed7-6d7c9aadfa7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "715\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of duplicated rows:\n",
+    "print(raw_df.duplicated(keep='first').sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43ba1ae3-446a-4fc7-abe9-abe91c6b7183",
    "metadata": {},
    "outputs": [],
    "source": []
